Add third-party library support

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -9,5 +9,10 @@
  * compiled file, but it's generally better to create a new file per style scope.
  *
  *= require_self
+
+ *= require bootstrap-theme.min
+ *= require bootstrap.min
+ *= require font-awesome.min
+
  *= require_tree .
  */
